--- a/index.html
+++ b/index.html
@@ -3,47 +3,90 @@
 <head>
   <meta charset="UTF-8">
   <title>Moneda al Aire - Tuk'Quan</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #0a0a0a;
+      margin: 0;
+      padding: 0;
+      height: 100vh;
+      background: radial-gradient(ellipse at center, #111 0%, #000 100%);
       color: #f4e7c6;
-      font-family: 'Georgia', serif;
+      font-family: 'Cinzel', serif;
       text-align: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      position: relative;
+      overflow: hidden;
     }
+
+    body::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: url('https://i.ibb.co/5rP3DZR/fog.png') repeat;
+      opacity: 0.08;
+      animation: fogAnim 60s linear infinite;
+      z-index: 0;
+    }
+
+    @keyframes fogAnim {
+      from { background-position: 0 0; }
+      to { background-position: 1000px 0; }
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      z-index: 1;
+      text-shadow: 0 0 8px #aa8833;
+    }
+
     button {
       padding: 1rem 2rem;
       font-size: 1.2rem;
       margin: 1rem;
       border-radius: 8px;
-      border: none;
-      background-color: #333;
-      color: #f4e7c6;
+      border: 1px solid #ffd700;
+      background-color: #222;
+      color: #ffd700;
       cursor: pointer;
+      z-index: 1;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
+      transition: all 0.3s ease;
     }
+
+    button:hover {
+      background-color: #444;
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.4);
+    }
+
     #ritualImage {
       max-width: 70vw;
       max-height: 60vh;
       margin-top: 1rem;
-      border-radius: 10px;
+      border-radius: 12px;
+      border: 2px solid #ffd700;
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
       display: none;
+      z-index: 1;
     }
+
     #ritualText {
       font-style: italic;
       margin-top: 1rem;
       font-size: 1.1rem;
       max-width: 80%;
+      z-index: 1;
     }
+
     #resultadoFinal {
       margin-top: 1rem;
       font-size: 1.3rem;
       color: #ffd700;
       font-weight: bold;
+      z-index: 1;
     }
   </style>
 </head>
@@ -79,7 +122,6 @@
       const res = document.getElementById('resultadoFinal');
 
       if (faseActual === 0) {
-        // Fase de invocación
         img.style.display = 'block';
         img.src = fases.fase1;
         txt.innerText = frases.aparicion;
@@ -88,7 +130,6 @@
         faseActual = 1;
 
       } else if (faseActual === 1) {
-        // Fase de resultado aleatorio
         esCara = Math.random() > 0.5;
         img.src = esCara ? fases.cara : fases.cruz;
         txt.innerText = esCara ? frases.cara : frases.cruz;
@@ -97,14 +138,12 @@
         faseActual = 2;
 
       } else if (faseActual === 2) {
-        // Fase de cierre
         img.src = fases.fase3;
         txt.innerText = frases.despedida;
         btn.innerText = "Iniciar Nuevo Ritual";
         faseActual = 3;
 
       } else {
-        // Reiniciar todo
         faseActual = 0;
         img.style.display = 'none';
         img.src = "";
