--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
   <div id="ritualText"></div>
   <div id="resultadoFinal"></div>
 
+  <audio id="ritualAudio" src="ritual_ambient.mp3" loop autoplay></audio>
+  
   <script>
     const frases = {
       aparicion: "Desde la sombra, Tuk'Quan escucha tu duda...",
