--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
   <div id="ritualText"></div>
   <div id="resultadoFinal"></div>
 
-  <audio id="ritualAudio" src="ritual_ambient.mp3" loop autoplay></audio>
+<audio id="ritualAudio" src="https://raw.githubusercontent.com/frankiemcking/ritual-tukquan/main/ritual_ambient.mp3" loop autoplay></audio>
+  
 
   <script>
     const frases = {
