--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       margin: 0;
       padding: 0;
       width: 100%;
-      height: 100%;
+      height: 100dvh;
       background: radial-gradient(ellipse at center, #111 0%, #000 100%);
       color: #f4e7c6;
       font-family: 'Cinzel', serif;
@@ -25,7 +25,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      height: 100%;
+      height: 100dvh;
       padding: 1rem;
       box-sizing: border-box;
     }
@@ -109,11 +109,6 @@
     <div id="historial"></div>
   </main>
   <audio id="ritualAudio" src="ritual_ambient.mp3" loop></audio>
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js');
-    }
-  </script>
   <script>
     const frases = {
       aparicion: "Desde la sombra, Tuk'Quan escucha tu duda...",
@@ -205,6 +200,11 @@
         res.innerText = "";
         btn.innerText = "Iniciar Ritual";
       }
+    }
+  </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js');
     }
   </script>
 </body>
